--- a/lesson_32_react/package.json
+++ b/lesson_32_react/package.json
@@ -16,7 +16,8 @@
     "eject": "react-scripts eject",
     "rename-index": "node -e \"require('fs').rename('./build/index.html', './build/200.html', (err) => { console.log(err ? err : 'File renamed!') })\"",
     "predeploy": "npm run build && npm run rename-index",
-    "deploy": "cd build && surge --domain uber-eats-rudnitskih.surge.sh"
+    "deploy": "surge --project ./build --domain uber-eats-rudnitskih.surge.sh",
+    "format": "prettier --write \"src/**/*.{js,jsx,css}\""
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -34,6 +35,7 @@
     ]
   },
   "devDependencies": {
+    "prettier": "1.18.2",
     "surge": "^0.21.3"
   }
 }
