--- a/lesson_48/package.json
+++ b/lesson_48/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "express": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
